# bubblegum

./: .env.example  .gitignore  Cargo.toml  Dockerfile  config.rs  docker-compose.standalone.yml  docker-compose.yml  init.sql  init_ch.sql  package.json  readme.md
.github/workflows/: ci-cd.yml  docker-publish.yml
migrations/: 0001_init.sql
src/: api.rs  config.rs  decoder.rs  idl.rs  indexer.rs  lib.rs  logging.rs  main.rs  rpc.rs
src/db/: clickhouse.rs  mod.rs  postgres.rs
static/: app.js  index.css  index.html  style.css
tests/: integration_test.rs  unit_test.rs
