[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-rpc-client = "1.18"
solana-transaction-status = "1.18"
anchor-client = "0.30"
anchor-lang = "0.30"

tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "json"] }
clickhouse-rs = "1.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
borsh = "1.3"
borsh-derive = "1.3"

config = "0.14"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

thiserror = "1.0"
anyhow = "1.0"
bs58 = "0.5"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true